--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "es5",
     "module": "commonjs",
     "resolveJsonModule": true,
     "esModuleInterop": true,
