--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["es6", "dom", "es2017"],
     "target": "es5",
     "module": "commonjs",
     "resolveJsonModule": true,
