--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "iran-info",
-  "version": "0.5.0",
+  "name": "@im-parsa/iran-info",
+  "version": "0.6.1",
   "description": "Get information about cities and provinces of Iran",
   "homepage": "https://github.com/im-parsa/iran-info#readme",
   "repository": {
@@ -17,6 +17,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "test": "exit 0",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\""
   },
